pkgs/typed-racket-pkgs/typed-racket-tests/tests/typed-racket/fail/cast-top-level2.rkt
#;
(exn-pred exn:fail:syntax? #rx".*Unbound type.*")

#lang racket/load

(require typed/racket/base)

(define: (a) (f (x : Number)) : a
  (cast x a))
